introduce hikari db load balancer